--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -260,7 +260,7 @@ li.dropdown {
 }
 
 .headerdetails ul.topcartopen li > table td {
-	color: #;
+	color: #DDDDDD;
 	vertical-align: top;
 	padding: 5px 10px;
 	border-bottom: 1px dashed #E7E7E7;
@@ -390,7 +390,7 @@ ul.categorymenu > li > a {
 ul.categorymenu > li:hover > a, ul.categorymenu > li > a.active {
 	color: #fff !important;
 	text-shadow: none;
-	background-color: #f25c27
+	background-color: #f25c27;
 }
 
 ul.categorymenu > li > div {
@@ -407,7 +407,7 @@ ul.categorymenu > li > div {
 	list-style: none;
 	background-color: #ffffff;
 	border: 1px solid #DDDDDD;
-	border-bottom: 4px solid #F25C27;
+	border-bottom: 4px solid #f25b28;
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
@@ -441,7 +441,6 @@ ul.categorymenu > li:hover > div {
 ul.categorymenu > li > div > ul {
 	display: table-cell;
 	vertical-align: top;
-	fl
 }
 
 ul.categorymenu > li ul + ul {
@@ -1132,7 +1131,7 @@ ul.productpagecart li {
 
 .productlinks a {
 	margin-right: 10px;
-	background: url(../img/productpagelinkicon.png) no-repeat 0 0;
+	background: url(public/img/productpagelinkicon.png) no-repeat 0 0;
 	padding: 0 0 0 25px;
 	color: #4B5B58;
 	line-height: 24px;
@@ -1156,7 +1155,7 @@ h1.productname {
 }
 
 .productright a.addtocart {
-	background: url(../img/addtocart.png) no-repeat scroll 0 0 transparent;
+	background: url(public/img/addtocart.png) no-repeat scroll 0 0 transparent;
 	color: #FFFFFF;
 	font-size: 20px;
 	font-weight: bold;
@@ -1412,11 +1411,11 @@ ul.total li span.extra {
 
 .totalamout {
 	font-size: 22px;
-	color: #f25c27
+	color: #f25c27;
 }
 
-. /* login */
- .loginbox {
+/* login */
+.loginbox {
 	padding: 5px;
 }
 
@@ -2255,7 +2254,7 @@ a.tweet_avatar {
 	right: 5px;
 	height: 58px;
 	width: 58px;
-	background: url(../img/gotop.png) no-repeat 0 0;
+	background: url(publuc/img/gotop.png) no-repeat 0 0;
 	display: block;
 	text-indent: -9999px;
 	overflow: hidden
